# valbridge

./: .gitignore  .release-please-manifest.json  LICENSE  README.md  commitlint.config.js  package.json  release-please-config.json
.buildkite/: generate_pipeline.py  pipeline.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  compliance.yml  manual-publish-python.yml  release-please.yml
cli/: CHANGELOG.md  go.mod  go.sum  integration_test.go  main.go
cli/adapter/: capabilities.go  types.go  types_test.go
cli/bundler/: bundler.go  bundler_test.go  normalize.go
cli/cmd/: compliance.go  extract.go  generate.go  generate_test.go  root.go  root_test.go
cli/compliance/: fetcher.go  fetcher_test.go  harness.go  harness_template.go  harness_test.go  loader.go  loader_test.go  report.go  report_test.go  runner.go  runner_test.go  types.go
cli/config/: env.go  runtime.go
cli/extractor/: extractor.go  extractor_test.go
cli/fetcher/: fetcher.go  fetcher_test.go  localhost.go  localhost_test.go  uri.go  uri_test.go
cli/generator/: generator.go  generator_test.go
cli/ui/: ui.go  (+1 more)
docs/: README.md  cli-analysis-and-improvements.md  cli-current-flow.md  type-support.md
python/: .gitignore  pyproject.toml
python/example/: generate.py  main.py  pyproject.toml  source.json  user.valbridge.jsonc
python/example/_valbridge/: __init__.py  __init__.pyi  schemas.py  valbridge.manifest.json
python/example/subdir/: another.xschema.jsonc
scripts/: bump-version.sh
typescript/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
(+79 files in other folders)
