[project]
name = "valbridge-python-example"
version = "0.1.0"
description = "Example project demonstrating Python valbridge usage"
requires-python = ">=3.12"
dependencies = [
    "valbridge-pydantic",
    "valbridge",
]

[project.scripts]
generate = "generate:main"

[tool.uv.sources]
valbridge-pydantic = { workspace = true }
valbridge = { workspace = true }
